TC-687-Fix some mobile text wrapping issues

--- a/solution/ui/src/components/organisms/fixedCosts/fixedCosts.less
+++ b/solution/ui/src/components/organisms/fixedCosts/fixedCosts.less
@@ -12,7 +12,8 @@
 
     button {
       color: @secondary-blue-dark;
-      margin: 0 0.2;
+      margin: 0 0.2rem;
+      text-align: left;
     }
   }
   
